@@ -30,7 +30,7 @@
 // If an item is dropped, does it go stright into the users inventory? (Note 1)
 item_auto_get: no
 
-// How long does it take for an item to disappear from the floor after it is dropped? (in miliseconds) 
+// How long does it take for an item to disappear from the floor after it is dropped? (in miliseconds) [Note 3]
 flooritem_lifetime: 60000
 
 // Grace time during which only the person who did the most damage to a monster can get the item? (in milliseconds) (Note 3)
